feat: dockerize UniTrack with multi-stage builds and NGINX